--- a/src.com.gduf/data/Config.properties
+++ b/src.com.gduf/data/Config.properties
@@ -1,5 +1,5 @@
 #Configuration Properties
-#Sun Aug 13 15:09:58 CST 2023
+#Mon Aug 14 16:24:22 CST 2023
 METHODS_PATH=src.com.gduf\\data\\MethodData.properties
 TYPE_PATH=src.com.gduf\\data\\TypeData.properties
 PORT=8080
@@ -10,6 +10,7 @@ DATA_PATH_PATH=src.com.gduf\\data\\PathData.properties
 LINKED_LIST_DATA_PATH=src.com.gduf\\data\\key_value_data\\LinkedListData.properties
 HASH_CLASSNAME=command.HashCommand
 DATA_CLASSNAME=command.DataCommand
+HOST_NAME=127.0.0.1
 STRING_CLASSNAME=command.StringCommand
 LINKED_LIST_CLASSNAME=command.LinkedListCommand
 STRING_DATA_PATH=src.com.gduf\\data\\key_value_data\\StringData.properties
