增加键的唯一性判断 若重复键是自己类的就覆盖内容 是别的类的就不允许set 报文TBD

--- a/src.com.gduf/data/Config.properties
+++ b/src.com.gduf/data/Config.properties
@@ -1,5 +1,5 @@
 #Configuration Properties
-#Mon Aug 14 16:24:22 CST 2023
+#Thu Aug 17 13:41:19 CST 2023
 METHODS_PATH=src.com.gduf\\data\\MethodData.properties
 TYPE_PATH=src.com.gduf\\data\\TypeData.properties
 PORT=8080
@@ -11,6 +11,7 @@ LINKED_LIST_DATA_PATH=src.com.gduf\\data\\key_value_data\\LinkedListData.propert
 HASH_CLASSNAME=command.HashCommand
 DATA_CLASSNAME=command.DataCommand
 HOST_NAME=127.0.0.1
+KEYS_VALUE_PATH=src.com.gduf\\data\\key_value_data\\KeysData.properties
 STRING_CLASSNAME=command.StringCommand
 LINKED_LIST_CLASSNAME=command.LinkedListCommand
 STRING_DATA_PATH=src.com.gduf\\data\\key_value_data\\StringData.properties
