完善日志分布 修改细节 优化代码

--- a/src.com.gduf/data/Config.properties
+++ b/src.com.gduf/data/Config.properties
@@ -1,5 +1,6 @@
 #Configuration Properties
 #Thu Aug 17 13:41:19 CST 2023
+TYPE = 5
 METHODS_PATH=src.com.gduf\\data\\MethodData.properties
 TYPE_PATH=src.com.gduf\\data\\TypeData.properties
 PORT=8080
